--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,28 +7,33 @@ on:
 
 permissions:
   contents: write
+  id-token: write
 
 jobs:
   release:
     runs-on: ubuntu-latest
+    environment: release
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          persist-credentials: false
+          fetch-depth: 0
+          persist-credentials: true # so @semantic-release/git can push
 
-      - name: Generate GitHub App token
-        id: app-token
-        uses: actions/create-github-app-token@v1
-        with:
-          app-id: ${{ vars.RELEASE_APP_ID }}
-          private-key: ${{ secrets.RELEASE_APP_SECRET }}
+      # TODO: re-instate if/when release-bot app is created (and set persist-credentials: false, above)
+      # - name: Generate GitHub App token
+      #   id: app-token
+      #   uses: actions/create-github-app-token@v1
+      #   with:
+      #     app-id: ${{ vars.RELEASE_APP_ID }}
+      #     private-key: ${{ secrets.RELEASE_APP_SECRET }}
 
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20.8.1'
+          registry-url: 'https://registry.npmjs.org'
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
@@ -51,5 +56,4 @@ jobs:
       - name: Release with semantic-release
         run: npx semantic-release
         env:
-          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
