--- a/package.json
+++ b/package.json
@@ -108,5 +108,8 @@
     "typescript": "^5.8.3",
     "xml2js": "^0.6.2"
   },
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "engines": {
+    "node": ">=20"
+  }
 }
