ci: allow release pipeline to be manually run from github

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch: # enable workflow to be manually triggered
 
 permissions:
   contents: write
