feat(cli): add node compatible command line tool
Example: node cli/curate.js /data/CTHead /data/CTHead-deid

Includes a fix for handling unexpected files during scanning.

--- a/package.json
+++ b/package.json
@@ -66,7 +66,9 @@
     "@noble/hashes": "^2.0.1",
     "acorn": "^8.14.1",
     "acorn-globals": "^7.0.1",
+    "commander": "^14.0.3",
     "dcmjs": "^0.38.3",
+    "dicom-curate": "link:",
     "iso8601-duration": "^2.1.2",
     "js-crc": "^0.3.0",
     "js-sha256": "^0.11.0",
